=======
Changes
=======

0.2.0
======

 - Fix for dispatch methods defined in a hierarchy
 - drop support for python 2.6
 - drop support for python 3.2

0.1.2 (2014-07-07)
======================

 - Fix #1 Can not install fom PyPi

0.1.1 (2013-12-15)
======================

 - Initial release