@@ -5,6 +5,7 @@ Changes
 0.2.0
 ======
 
+ - merge() implements same signature as dict.update()
  - Fix for dispatch methods defined in a hierarchy
  - drop support for python 2.6
  - drop support for python 3.2
